<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBackDrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivForeInt"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/ivForeInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="644dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/interior" />

    <TextView
        android:id="@+id/tvThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:width="260dp"
        android:fontFamily="@font/aladin"
        android:gravity="center_horizontal"
        android:text="@string/split_the_bill"
        android:textColor="@color/material_dynamic_neutral99"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:width="170dp"
        android:height="100dp"
        android:textSize="32sp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aladin"
        android:text="@string/continue1"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_total"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvThanks" />

    <EditText
        android:id="@+id/etNGuests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-350dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/number_of_guests"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTotal" />

    <Spinner
        android:id="@+id/serviceTip"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNGuests"
        android:entries="@array/tipAmount"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/please_let_us_know_how_we_did"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/aladin"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/serviceTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNGuests" />

</androidx.constraintlayout.widget.ConstraintLayout>